# test-for-bot-library

./: README.md  main.py  pyproject.toml
.github/workflows/: on-push-main.yaml
