[tool.poetry]
name = "this-is-a-library"
version = "0.1.0"
description = "sdf"
authors = ["Remmelt Pit <remmelt.pit@source.ag>"]
readme = "README.md"
packages = [{include = "this_is_a_library"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
